--- a/package.json
+++ b/package.json
@@ -20,7 +20,8 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
-    "nodemon": "^3.1.4"
+    "nodemon": "^3.1.4",
+    "pdfkit": "^0.16.0"
   },
   "devDependencies": {
     "jest": "^29.7.0",
