--- a/package.json
+++ b/package.json
@@ -26,7 +26,10 @@
     "pdfkit": "^0.16.0"
   },
   "devDependencies": {
+    "chai": "^5.2.0",
     "jest": "^29.7.0",
+    "mocha": "^11.1.0",
+    "sinon": "^20.0.0",
     "supertest": "^7.1.0"
   }
 }
