--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "description": "",
   "main": "server.js",
+  
   "scripts": {
     "test": "jest",
     "start": "node server.js",
@@ -25,7 +26,8 @@
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.12.2",
     "nodemon": "^3.1.4",
-    "pdfkit": "^0.16.0"
+    "pdfkit": "^0.16.0",
+    "uuid": "^13.0.0"
   },
   "devDependencies": {
     "chai": "^5.2.0",
