--- a/.gitignore
+++ b/.gitignore
@@ -84,6 +84,7 @@ web_modules/
 .env.production.local
 .env.local
 
+./utils/encrypt-coordinates.js
 # parcel-bundler cache (https://parceljs.org/)
 .cache
 .parcel-cache
